--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@samkirkland/ftp-deploy",
+  "name": "danigta/test-ftp-deploy",
   "version": "1.2.1",
   "private": false,
   "description": "Deploy files to a ftp server",
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "deploy": "tsc && node ./dist/cli.js --log-level verbose ---server samkirkland.com --protocol ftp --username \"ftp-deploy@samkirkland.com\" --password \"actualPasswordHere\" --exclude dist/** --exclude **/.git* --exclude **/.git*/** --exclude **/node_modules/** --exclude package.json",
+    "deploy": "tsc",
     "lint": "eslint src/**/*.ts",
     "test": "jest",
     "test-watch": "jest --watch"
